<resources>
    <string name="app_name">MykotlinApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragmenttwo">hai fragment</string>
    <string name="login">Login</string>
    <string name="enter_password">enter password</string>
    <string name="enter_email">enter email</string>
    <string name="enter_name">enter name</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="email_warning">email wrong</string>
    <string name="name_warning">name wrong</string>
    <string name="phone_warning">phone number wrong</string>
</resources>
