<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".app.login.registration.RegisterFragment">

    <EditText
        android:id="@+id/reg_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:id="@+id/reg_email_edt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:id="@+id/reg_phone_edt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:id="@+id/reg_pass_edt"/>

    <Button
        android:id="@+id/reg_ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        />

</LinearLayout>