<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.login.registration.LoginFragment">

<EditText
    android:id="@+id/login_email_edt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_email"
    android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/login_pass_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:hint="@string/enter_password"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/login_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="146dp"
        android:text="@string/login"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="127dp" />

</RelativeLayout>